# GFW-backend

./: .env  .gitignore  main.py  pyproject.toml
utils/: config.py  crud.py  database.py  encrypt.py  models.py  schemas.py
